legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc482/save_st/pr68806.c-4.8.2-1.out.txt
pr68806.c: In function ‘sad’:
pr68806.c:6:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int y = 0; y < 16; y++)
   ^
pr68806.c:6:3: note: use option -std=c99 or -std=gnu99 to compile your code
pr68806.c:8:7: error: ‘for’ loop initial declarations are only allowed in C99 mode
       for (int x = 0; x < 12; x++)
       ^
